# coordination-2021

./: Cargo.toml
benches/: double_buffering.rs  ring.rs  three_adder.rs
src/: lib.rs
src/double_buffering/: mod.rs  mpstthree.rs  rumpsteak.rs  rumpsteak_oneshot.rs
src/ring/: mod.rs  mpstthree.rs  rumpsteak.rs  rumpsteak_oneshot.rs
src/three_adder/: mod.rs  mpstthree.rs  rumpsteak.rs  rumpsteak_oneshot.rs
